coba fix youtube yang overflow

--- a/src/App.css
+++ b/src/App.css
@@ -22,4 +22,5 @@
 
 .fadeOut {
   animation: fadeOut 5s ease-in-out;
+  -webkit-animation: fadeOut 5s ease-in-out;
 }
